--- a/bai-tap/link-image/html/item-1.html
+++ b/bai-tap/link-image/html/item-1.html
@@ -6,16 +6,16 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<a href="home.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
+		<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 		<h1>Thông tin sản phẩm</h1>
 		<br>
 		<br>
 		<br>
 		<div id="item1">
-		<a href="home.html#go-to-item1"><img class="item-image" src="../img/3ce-2018-details-page.jpg" alt="3ce 2018" title="Son 3CE phiên bản 2018" /></a>
+		<a href="index.html#go-to-item1"><img class="item-image" src="../img/3ce-2018-details-page.jpg" alt="3ce 2018" title="Son 3CE phiên bản 2018" /></a>
 		<br>
-		<a class="item-name" href="home.html#go-to-item1">SON THỎI LÌ 3CE MATTE LIP COLOR 2018</a>
+		<a class="item-name" href="index.html#go-to-item1">SON THỎI LÌ 3CE MATTE LIP COLOR 2018</a>
 		</div>
 
 		<div id="item-info">
