--- a/bai-tap/link-image/html/item-2.html
+++ b/bai-tap/link-image/html/item-2.html
@@ -6,16 +6,16 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<a href="home.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
+		<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 		<h1>Thông tin sản phẩm</h1>
 		<br>
 		<br>
 		<br>
 		<div id="item1">
-		<a href="home.html#go-to-item2"><img class="item-image" src="../img/candy-lab-details-page.jpg" alt="candy lab creampop the velvet lip color" title="SON KEM LÌ CANDYLAB CREAMPOP THE VELVET LIP COLOR" /></a>
+		<a href="index.html#go-to-item2"><img class="item-image" src="../img/candy-lab-details-page.jpg" alt="candy lab creampop the velvet lip color" title="SON KEM LÌ CANDYLAB CREAMPOP THE VELVET LIP COLOR" /></a>
 		<br>
-		<a class="item-name" href="home.html#go-to-item2">SON KEM LÌ CANDYLAB CREAMPOP THE VELVET LIP COLOR</a>
+		<a class="item-name" href="index.html#go-to-item2">SON KEM LÌ CANDYLAB CREAMPOP THE VELVET LIP COLOR</a>
 		</div>
 
 		<div id="item-info">
