--- a/bai-tap/link-image/html/item-3.html
+++ b/bai-tap/link-image/html/item-3.html
@@ -6,16 +6,16 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<a href="home.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
+		<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 		<h1>Thông tin sản phẩm</h1>
 		<br>
 		<br>
 		<br>
 		<div id="item1">
-		<a href="home.html#go-to-item3"><img class="item-image" src="../img/black-rouge-cotton-lip-color-details-page.jpg" alt="black rouge cotton lip color" title="SON KEM LÌ BLACK ROUGE COTTON LIP COLOR" /></a>
+		<a href="index.html#go-to-item3"><img class="item-image" src="../img/black-rouge-cotton-lip-color-details-page.jpg" alt="black rouge cotton lip color" title="SON KEM LÌ BLACK ROUGE COTTON LIP COLOR" /></a>
 		<br>
-		<a class="item-name" href="home.html#go-to-item3">SON KEM LÌ BLACK ROUGE COTTON LIP COLOR</a>
+		<a class="item-name" href="index.html#go-to-item3">SON KEM LÌ BLACK ROUGE COTTON LIP COLOR</a>
 		</div>
 
 		<div id="item-info">
