--- a/bai-tap/link-image/html/item-4.html
+++ b/bai-tap/link-image/html/item-4.html
@@ -6,16 +6,16 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<a href="home.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
+		<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 		<h1>Thông tin sản phẩm</h1>
 		<br>
 		<br>
 		<br>
 		<div id="item1">
-		<a href="home.html#go-to-item4"><img class="item-image" src="../img/16-brand-chu-edition-details-page.jpg" alt="16 brand ru 16 taste chu edition" title="SON THỎI LÌ 16 BRAND RU 16 TASTE CHU EDITION" /></a>
+		<a href="index.html#go-to-item4"><img class="item-image" src="../img/16-brand-chu-edition-details-page.jpg" alt="16 brand ru 16 taste chu edition" title="SON THỎI LÌ 16 BRAND RU 16 TASTE CHU EDITION" /></a>
 		<br>
-		<a class="item-name" href="home.html#go-to-item4">SON THỎI LÌ 16 BRAND RU 16 TASTE CHU EDITION</a>
+		<a class="item-name" href="index.html#go-to-item4">SON THỎI LÌ 16 BRAND RU 16 TASTE CHU EDITION</a>
 		</div>
 
 		<div id="item-info">
