--- a/bai-tap/link-image/html/item-5.html
+++ b/bai-tap/link-image/html/item-5.html
@@ -6,16 +6,16 @@
 		<title>Home</title>
 	</head>
 	<body>
-		<a href="home.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
+		<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 		<h1>Thông tin sản phẩm</h1>
 		<br>
 		<br>
 		<br>
 		<div id="item1">
-		<a href="home.html#go-to-item5"><img class="item-image" src="../img/merzy-another-me-details-page.jpg" alt="merzy another me the first liptick" title="SON THỎI LÌ MERZY ANOTHER ME THE FIRST LIPSTICK" /></a>
+		<a href="index.html#go-to-item5"><img class="item-image" src="../img/merzy-another-me-details-page.jpg" alt="merzy another me the first liptick" title="SON THỎI LÌ MERZY ANOTHER ME THE FIRST LIPSTICK" /></a>
 		<br>
-		<a class="item-name" href="home.html#go-to-item5">SON THỎI LÌ MERZY ANOTHER ME THE FIRST LIPSTICK</a>
+		<a class="item-name" href="index.html#go-to-item5">SON THỎI LÌ MERZY ANOTHER ME THE FIRST LIPSTICK</a>
 		</div>
 
 		<div id="item-info">
