--- a/bai-tap/link-image/html/index.html
+++ b/bai-tap/link-image/html/index.html
@@ -6,7 +6,7 @@
 			<title>Home</title>
 		</head>
 		<body>
-			<a href="home.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
+			<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 			<h1>Danh sách sản phẩm</h1>
 			<br>
