--- a/bai-tap/link-image/html/index.html
+++ b/bai-tap/link-image/html/index.html
@@ -6,6 +6,7 @@
 			<title>Home</title>
 		</head>
 		<body>
+			<div id="layout">
 			<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 			<h1>Danh sách sản phẩm</h1>
@@ -36,6 +37,7 @@
 			<a href="item-5.html"><img class="item-image" id="go-to-item5" src="../img/merzy-another-me-home-page.jpg" alt="merzy another me the first liptick" title="SON THỎI LÌ MERZY ANOTHER ME THE FIRST LIPSTICK" /></a>
 			<br>
 			<a class="item-name" href="item-5.html">SON THỎI LÌ MERZY ANOTHER ME THE FIRST LIPSTICK</a>
+			</div>
 			</div>
 		</body>
 		</html>
