--- a/bai-tap/link-image/html/item-3.html
+++ b/bai-tap/link-image/html/item-3.html
@@ -6,6 +6,7 @@
 		<title>Home</title>
 	</head>
 	<body>
+		<div id="layout">
 		<a href="index.html"><img src="../img/header-image.jpg" alt="cosmetics" class="header-image"></a>
 
 		<h1>Thông tin sản phẩm</h1>
@@ -36,6 +37,7 @@
 				<li><p><span class="item-details">Xuất xứ</span>: Hàn Quốc</p></li>
 				<li><p><span class="item-details">Giá tiền</span>: <span class="item-currency">160.000</span></p></li>
 			</ul>
+		</div>
 		</div>
 	</body>
 	</html>
