--- a/bai-tap/image-gallery/html/index.html
+++ b/bai-tap/image-gallery/html/index.html
@@ -12,7 +12,7 @@
 		</div>
 		<div class="nav-bar">
 			<div class="nav-item">
-				<a href="index.html">Trang chủ</a>
+				<a href="index.html" class="active">Trang chủ</a>
 				<a href="about.html">Giới thiệu</a>
 				<a href="gallery.html">Gallery</a>
 			</div>
