--- a/bai-tap/image-gallery/html/about.html
+++ b/bai-tap/image-gallery/html/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Trang chủ</title>
+	<title>Giới thiệu</title>
 	<link rel="stylesheet" text="text/css" href="../css/style.css">
 </head>
 <body>
