--- a/bai-tap/image-gallery/html/gallery.html
+++ b/bai-tap/image-gallery/html/gallery.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="content-container">
 		<div class="header-image">
-			<img src="../image/logo.png" alt="">
+			<img src="../image/logo.png" alt="logo" title="logo">
 		</div>
 		<div class="nav-bar">
 			<div class="nav-item">
@@ -21,16 +21,16 @@
 		<div class="content">
 			<h1>GALLERY</h1>
 			<div class="row">
-				<div class="border"><img src="../image/1.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/2.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/3.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/4.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/5.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/6.png" class="image" alt=""></div>
-				<div class="border"><img src="../image/7.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/8.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/9.jpg" class="image" alt=""></div>
-				<div class="border"><img src="../image/10.jpg" class="image" alt=""></div>
+				<div class="border"><img src="../image/1.jpg" class="image" alt="odogaron" title="Odogaron"></div>
+				<div class="border"><img src="../image/2.jpg" class="image" alt="zorah magdaros" title="Zorah Magdaros"></div>
+				<div class="border"><img src="../image/3.jpg" class="image" alt="great jagras" Title="Great Jagras"></div>
+				<div class="border"><img src="../image/4.jpg" class="image" alt="diablos" title="Diablos"></div>
+				<div class="border"><img src="../image/5.jpg" class="image" alt="kirin" title="Kirin"></div>
+				<div class="border"><img src="../image/6.png" class="image" alt="radobaan" title="Radobaan"></div>
+				<div class="border"><img src="../image/7.jpg" class="image" alt="anjanath" title="Anjanath"></div>
+				<div class="border"><img src="../image/8.jpg" class="image" alt="rathalos" title="Rathalos"></div>
+				<div class="border"><img src="../image/9.jpg" class="image" alt="nergigante" Title="Nergigante"></div>
+				<div class="border"><img src="../image/10.jpg" class="image" alt="xeno’jiiva" title="Xeno’jiiva"></div>
 			</div>
 		</div>
 	</div>
