--- a/bai-tap/image-gallery/html/index.html
+++ b/bai-tap/image-gallery/html/index.html
@@ -8,11 +8,11 @@
 <body>
 	<div class="content-container">
 		<div class="header-image">
-			<img src="../image/logo.png" alt="">
+			<img src="../image/logo.png" alt="logo" title="logo">
 		</div>
 		<div class="nav-bar">
 			<div class="nav-item">
-				<a href="index.html" class="active">Trang chủ</a>
+				<a href="index.html">Trang chủ</a>
 				<a href="about.html">Giới thiệu</a>
 				<a href="gallery.html">Gallery</a>
 			</div>
