--- a/bai-tap/image-gallery/html/about.html
+++ b/bai-tap/image-gallery/html/about.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="content-container">
 		<div class="header-image">
-			<img src="../image/logo.png" alt="">
+			<img src="../image/logo.png" alt="logo" title="logo">
 		</div>
 		<div class="nav-bar">
 			<div class="nav-item">
