a lot of things

--- a/bai-tap/animated-card3/html/index.html
+++ b/bai-tap/animated-card3/html/index.html
@@ -6,6 +6,10 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<main>
+		<div>
+			<img class="rotate360" src="../image/1.png" alt="">
+		</div>
+	</main>
 </body>
 </html>
