--- a/bai-tap/animated-card3/html/index.html
+++ b/bai-tap/animated-card3/html/index.html
@@ -3,12 +3,40 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style2.css">
 	<title>Document</title>
 </head>
 <body>
-	<main>
-		<div>
-			<img class="rotate360" src="../image/1.png" alt="">
+	<!-- Snow Falling -->
+	<div id="snow"></div>
+	<!----- Below snow --->
+	<main id="container">
+		<div id="content">
+			<div id="column1">
+				<div id="box1">
+					<img src="../image/box1.png" alt="">
+				</div>
+				<div id="box2">
+					<img src="../image/box2.png" alt="">
+				</div>
+				<div id="box3">
+					<img src="../image/box3.png" alt="">
+				</div>
+			</div>
+			<div id="column2">
+				<div id="star">
+					<img id="rotate360" src="../image/1.png" alt="">
+				</div>
+				<div id="we-wish">
+					<div id="text1">We Wish</div>
+				</div>
+				<div id="you-a-merry">
+					<div id="text2">You a Merry</div>
+				</div>
+				<div id="christmas">
+					<div id="text3">Christmas</div>
+				</div>
+			</div>
 		</div>
 	</main>
 </body>
