--- a/bai-tap/food-store-3/html/index.html
+++ b/bai-tap/food-store-3/html/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<title>Food Store</title>
 </head>
 <body>
@@ -10,33 +11,45 @@
 		<div id="wrap-nav-bar">
 			<ul id="main-nav-bar">
 				<li>
-					<a href="index.html" class="active">
+					<a href="index.html">
 					Trang Chủ
 					</a>
 				</li>
 				<li>
-					<a href="index.html" class="active">
+					<a href="index.html">
 					Giới thiệu
 					</a>
 				</li>
 				<li>
-					<a href="index.html" class="active">
-					Cửa hàng
+					<a>
+					Cửa hàng <i id="dropdown-sub-nav" class="fas fa-caret-down"></i>
 					</a>
+					<ul id="sub-nav-bar">
+						<li>
+							<a href="">
+								Bánh Mì
+							</a>
+						</li>
+						<li>
+							<a href="">
+								Đồ Uống
+							</a>
+						</li>
+					</ul>
 				</li>
 				<img src="../img/banner.png" id="header-img" alt="">
 				<li>
-					<a href="index.html" class="active">
+					<a href="index.html">
 					Khuyến mại
 					</a>
 				</li>
 				<li>
-					<a href="index.html" class="active">
+					<a href="index.html">
 					Blog
 					</a>
 				</li>
 				<li>
-					<a href="index.html" class="active">
+					<a href="index.html">
 					Liên hệ
 					</a>
 				</li>
