--- a/bai-tap/food-store-3/html/index.html
+++ b/bai-tap/food-store-3/html/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<header>
-		<div id="wrap-nav-bar">
+		<h1>VIBREAD - Bánh Mì Việt</h1>
+		<nav id="wrap-nav-bar">
 			<ul id="main-nav-bar">
 				<li>
 					<a href="index.html">
@@ -54,7 +55,7 @@
 					</a>
 				</li>
 			</ul>
-		</div>
+		</nav>
 	</header>
 </body>
 </html>
