--- a/bai-tap/food-store-3/html/index.html
+++ b/bai-tap/food-store-3/html/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 	<header>
-		<h1>VIBREAD - Bánh Mì Việt</h1>
 		<nav id="wrap-nav-bar">
 			<ul id="main-nav-bar">
 				<li>
@@ -23,7 +22,7 @@
 				</li>
 				<li>
 					<a>
-					Cửa hàng <i id="dropdown-sub-nav" class="fas fa-caret-down"></i>
+					Thực đơn
 					</a>
 					<ul id="sub-nav-bar">
 						<li>
@@ -38,7 +37,7 @@
 						</li>
 					</ul>
 				</li>
-				<img src="../img/banner.png" id="header-img" alt="">
+				<a id="none-a" href="index.html"><img src="../img/logo.png" id="header-img" alt="" /></a>
 				<li>
 					<a href="index.html">
 					Khuyến mại
@@ -56,6 +55,20 @@
 				</li>
 			</ul>
 		</nav>
+		<section id="banner">
+			<div id="banner-text">
+				<h1>VIBREAD</h1>
+				<h3>BÁNH MÌ VIỆT - GIỮ TRỌN HƯƠNG VỊ TRUYỀN THỐNG</h3>
+				<a href=""><button>Thực Đơn</button></a>
+			</div>
+		</section>
 	</header>
+	<main id="container">
+		<section id="feature-product">
+			<div id="feature-heading">
+				<h2>Thực Đơn</h2>
+			</div>
+		</section>
+	</main>
 </body>
 </html>
