update html5 layout

--- a/bai-tap/html5-layout/html/blog-1.html
+++ b/bai-tap/html5-layout/html/blog-1.html
@@ -25,8 +25,7 @@
 			<header>
 				<h1>6 lý do Monster Hunter World &quot;mất màu&quot; trong lòng người hâm mộ</h1>
 			</header>
-			<section class="intro">
-
+			<article class="intro">
 				<article>
 					<p>Vạn vật trên đời muốn phát triển tốt hơn thì “tiến hóa” chính là điều kiện tất yếu. Đối với videogame thì đây cũng không phải là ngoại lệ, đặc biệt là với những dòng game “dài hơi” đã ra mắt quá nhiều phiên bản. Để tránh sự nhàm chán, để đổi mới chính mình, để tạo ra bước đột phá… mà các hãng phát triển game sẽ tìm ra cách nào đó để tạo ra một phiên bản mới hoàn toàn khác biệt. <span class="italic-text">Monster Hunter World</span> đến từ Capcom chính là một minh chứng sống động cho việc này, khi mà bản thân game đã mạnh dạn phá vỡ khá nhiều rào cản để tạo nên một con đường mới.</p>
 				</article>
@@ -36,13 +35,13 @@
 				<article>
 					<p>Không chỉ riêng người viết, mà đến cả những Youtuber nổi tiếng trong giới <span class="italic-text">Monster Hunter</span> như gaijinhunter hay Team Darkside cũng đã rời bỏ “Tân Thế Giới” trong <span class="italic-text">Monster Hunter World</span> để quay về với “chốn cũ” trong <span class="italic-text">Monster Hunter Generations Ultimate</span>. Thực tế cho thấy, số người chơi <span class="italic-text">Monster Hunter World</span> trên Steam cũng sụt giảm rất nhiều – mặc dù game chỉ mới ra mắt vỏn vẹn gần một tháng. Vậy, những nguyên nhân gì khiến <span class="italic-text">Monster Hunter World</span> nhanh chóng “mất màu” trong lòng người hâm mộ dòng game thần thánh này?</p>
 				</article>
-			</section>
-			<section class="first-part">
+			</article>
+			<article class="first-part">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-1.jpg" alt="Monster Hunter World" title="Quái vật vô hồn">
 				</header>
-				<section class="column-post">
+				<article class="column-post">
 					<article class="column1">
 						<p class="section-number">1</p>
 					</article>
@@ -60,14 +59,14 @@
 							</article>
 						</div>
 					</article>
-				</section>
-			</section>
-			<section class="second-part">
+				</article>
+			</article>
+			<article class="second-part">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-2.jpg" alt="Monster Hunter World" title="Trang bị &quot;mất chất&quot;">
 				</header>
-				<section class="column-post">
+				<article class="column-post">
 					<article class="column1">
 						<p class="section-number">2</p>
 					</article>
@@ -85,14 +84,14 @@
 							</article>
 						</div>
 					</article>
-				</section>
-			</section>
-			<section class="third-part">
+				</article>
+			</article>
+			<article class="third-part">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-3.jpg" alt="Monster Hunter World" title="Giao diện rườm rà">
 				</header>
-				<section class="column-post">
+				<article class="column-post">
 					<article class="column1">
 						<p class="section-number">3</p>
 					</article>
@@ -110,14 +109,14 @@
 							</article>
 						</div>
 					</article>
-				</section>
-			</section>
-			<section class="fourth-part">
+				</article>
+			</article>
+			<article class="fourth-part">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-4.jpg" alt="Monster Hunter World" title="Độ khó giảm mạnh">
 				</header>
-				<section class="column-post">
+				<article class="column-post">
 					<article class="column1">
 						<p class="section-number">4</p>
 					</article>
@@ -135,14 +134,14 @@
 							</article>
 						</div>
 					</article>
-				</section>
-			</section>
-			<section class="fifth-part">
+				</article>
+			</article>
+			<article class="fifth-part">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-5.jpg" alt="Monster Hunter World" title="Hệ thống nâng cấp thiếu sáng tạo">
 				</header>
-				<section class="column-post">
+				<article class="column-post">
 					<article class="column1">
 						<p class="section-number">5</p>
 					</article>
@@ -160,14 +159,14 @@
 							</article>
 						</div>
 					</article>
-				</section>
-			</section>
-			<section class="sixth-part">
+				</article>
+			</article>
+			<article class="sixth-part">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-6.jpg" alt="Monster Hunter World" title="Bản đồ quá &quot;loãng&quot;">
 				</header>
-				<section class="column-post">
+				<article class="column-post">
 					<article class="column1">
 						<p class="section-number">6</p>
 					</article>
@@ -185,9 +184,9 @@
 							</article>
 						</div>
 					</article>
-				</section>
-			</section>
-			<section class="ending">
+				</article>
+			</article>
+			<article class="ending">
 				<header>
 					<div class="cross-line"></div>
 					<img class="image-post" src="../image/blog-1-image-7.jpg" alt="Monster Hunter World" title="Monster Hunter World">
@@ -195,10 +194,10 @@
 				<article>
 					<p>Bài viết này được thực hiện bởi một người đã gắn bó với dòng game <span class="italic-text">Monster Hunter</span> “truyền thống” cũng khá lâu, và những thay đổi trong <span class="italic-text">Monster Hunter World</span> thật sự không tạo nên được sự hứng khởi như ngày nào. Do đó, có rất nhiều chi tiết trong bài thuộc dạng thiên kiến cá nhân, khó tránh khỏi việc “đá thúng đụng nia” với một số bạn đọc có tình cảm tốt hơn với <span class="italic-text">Monster Hunter World</span>. Tuy vậy, đây cũng là những cảm xúc chân thành của người viết, và đã được chỉnh lý sao cho nó ở mức độ “trung lập” hết sức có thể. Nếu có điều gì không đúng, xin bạn đọc đừng ngại chia sẻ qua mục bình luận bên dưới. Xin cám ơn!</p>
 				</article>
-			</section>
+			</article>
 		</div>
-	</section>
-	<footer>
+	</article>
+	<section>
 		<aside>
 			<div class="cross-line"></div>
 			<h3>Related Post</h3>
@@ -237,7 +236,12 @@
 				</div>
 			</div>
 		</aside>
-	</footer>
+	</section>
 	</main>
+	<footer>
+		<div id="copyright">
+			<div id="created">Created by Cody</div>
+		</div>
+	</footer>
 </body>
 </html>
