--- a/bai-tap/html5-layout/html/blog-1.html
+++ b/bai-tap/html5-layout/html/blog-1.html
@@ -8,19 +8,19 @@
 	<link rel="stylesheet" text="text/css" href="../css/style3.css">
 </head>
 <body>
-	<main class="content-container">
 	<header>
 		<div class="header-image">
 			<img src="../image/logo.png" alt="logo" title="logo">
 		</div>
 		<nav class="nav-bar">
-				<a class="nav-item" href="index.html">Trang chủ</a>
-				<a class="nav-item" href="about.html">Giới thiệu</a>
-				<a class="nav-item" href="gallery.html">Gallery</a>
-				<a class="nav-item" href="blog.html">Blog</a>
+			<a class="nav-item" href="index.html">Trang chủ</a>
+			<a class="nav-item" href="about.html">Giới thiệu</a>
+			<a class="nav-item" href="gallery.html">Gallery</a>
+			<a class="nav-item" href="blog.html">Blog</a>
 		</nav>
 	</header>
-	<section class="content">
+	<main class="content-container">
+	<div class="content">
 		<div class="content-container">
 			<header>
 				<h1>6 lý do Monster Hunter World &quot;mất màu&quot; trong lòng người hâm mộ</h1>
@@ -196,7 +196,7 @@
 				</article>
 			</article>
 		</div>
-	</article>
+	</div>
 	<section>
 		<aside>
 			<div class="cross-line"></div>
