--- a/bai-tap/animated-card3/html/index.html
+++ b/bai-tap/animated-card3/html/index.html
@@ -7,6 +7,9 @@
 	<title>Document</title>
 </head>
 <body>
+	<!-- Christmas Song -->
+	<iframe src="../music/music.mp3" allow="autoplay" style="display:none" id="iframeAudio"></iframe>
+	<!-- Christmas Song -->
 	<!-- Snow Falling -->
 	<div id="snow"></div>
 	<!----- Below snow --->
