--- a/onlab/test1/html/ech-phi-tieu-doc.html
+++ b/onlab/test1/html/ech-phi-tieu-doc.html
@@ -19,25 +19,19 @@
 					Sát thủ bé nhỏ đầy màu sắc
 				</h2>
 				<p>
-					Ếch phi tiêu độc (danh pháp khoa học: Dendrobatidae) là một nhóm các loài ếch trong họ Dendrobatidae chuyên sống ở Trung
-					và Nam Mỹ.
+					Ếch phi tiêu độc (danh pháp khoa học: Dendrobatidae) là một nhóm các loài ếch trong họ Dendrobatidae chuyên sống ở Trung và Nam Mỹ.
 				</p>
 				<p>
-					Sở dĩ chúng có tên như vậy vì nọc độc của chúng được thổ dân da đỏ sử dụng để tẩm vào phi tiêu khi săn bắn. Sát thủ sở
-					hữu nọc độc mạnh nhất trong họ này chính là ếch phi tiêu vàng (Phyllobates terribilis) ở Colombia với kích thước chỉ có
-					5cm.
+					Sở dĩ chúng có tên như vậy vì nọc độc của chúng được thổ dân da đỏ sử dụng để tẩm vào phi tiêu khi săn bắn. Sát thủ sở hữu nọc độc mạnh nhất trong họ này chính là ếch phi tiêu vàng (Phyllobates terribilis) ở Colombia với kích thước chỉ có 5cm.
 				</p>
 				<p>
-					Da của chúng tiết ra batrachotoxin, một loại chất độc khiến hệ thân kinh bị tê liệt, gây tê liệt các cơ và dẫn tới tử
-					vong. Nọc của một con ếch phi tiêu vàng có thể giết chết gần 20 người đàn ông khỏe mạnh hoặc thậm chí 2 con voi đực châu
-					Phi.
+					Da của chúng tiết ra batrachotoxin, một loại chất độc khiến hệ thân kinh bị tê liệt, gây tê liệt các cơ và dẫn tới tử vong. Nọc của một con ếch phi tiêu vàng có thể giết chết gần 20 người đàn ông khỏe mạnh hoặc thậm chí 2 con voi đực châu Phi.
 				</p>
 				<div class="image">
 					<img src="../img/ech-phi-tieu-doc-1.jpg" alt="ech phi tieu doc">
 				</div>
 				<p>
-					Tuy là loài ếch bé nhỏ có nọc độc có thể giết chết cả... voi, nhưng tổ tiên của chúng sống cách đây 40 tới 45 triệu năm
-					lại không hề có độc. Sở dĩ chúng có thể tiết nọc độc là do chúng ăn vào các sinh vật có độc tính.
+					Tuy là loài ếch bé nhỏ có nọc độc có thể giết chết cả... voi, nhưng tổ tiên của chúng sống cách đây 40 tới 45 triệu năm	lại không hề có độc. Sở dĩ chúng có thể tiết nọc độc là do chúng ăn vào các sinh vật có độc tính.
 				</p>
 				<h2>
 					Loài ếch bé nhỏ đang đứng trước nguy cơ tuyệt chủng
@@ -46,15 +40,18 @@
 					<img src="../img/ech-phi-tieu-doc-2.jpg" alt="ech phi tieu doc">
 				</div>
 				<p>
-					Dù là loài kịch độc nhưng chúng cũng là sinh vật rất yêu quí con cái mình, một nghiên cứu của Ralph Saporito thuộc Đại
-					học Carroll John, Ohio năm 2014 cho thấy nòng nọc con sẽ nhận được một lượng nọc độc để phòng vệ từ ếch mẹ.
+					Dù là loài kịch độc nhưng chúng cũng là sinh vật rất yêu quí con cái mình, một nghiên cứu của Ralph Saporito thuộc Đại học Carroll John, Ohio năm 2014 cho thấy nòng nọc con sẽ nhận được một lượng nọc độc để phòng vệ từ ếch mẹ.
 				</p>
 				<p>
-					Không chỉ được thổ dân sử dụng làm vũ khí chết người, nọc của loài ếch này còn được giới y khoa nghiên cứu nhằm chế tạo
-					thuốc giảm đau.
+					Không chỉ được thổ dân sử dụng làm vũ khí chết người, nọc của loài ếch này còn được giới y khoa nghiên cứu nhằm chế tạo thuốc giảm đau.
 				</p>
 			</article>
     	</div>
-    </main>
+	</main>
+	<footer>
+		<div id="go-to-top">
+			<a href="#"><img src="../img/go-to-top-button.png" alt="go to top"></a>
+		</div>
+	</footer>
 </body>
 </html>
