--- a/onlab/test1/html/index.html
+++ b/onlab/test1/html/index.html
@@ -7,40 +7,45 @@
     <link rel="shortcut icon" type="image/png" href="../img/favicon.ico"/>
 </head>
 <body>
-    <header>
-        <h1>Top 6 loài động vật độc nhất thế giới</h1>
-    </header>
-    <main>
-        <div id="container">
-            <div class="row">
-                <div class="item">
-                    <a href="ech-phi-tieu-doc.html" class="image"><img src="../img/ech-phi-tieu-doc.jpg" class ="image" alt="ech phi tieu doc"></a>
-                    <a href="ech-phi-tieu-doc.html" class="title"><span>Ếch phi tiêu độc</span></a> 
-                </div>
-                <div class="item">
-                    <a href="ca-noc.html" class="image"><img src="../img/ca-noc.jpg" alt="ca noc"></a>
-                    <a href="ca-noc.html" class="title"><span>Cá nóc</span></a>
-                </div>
-                <div class="item">
-                    <a href="ran-taipan.html" class="image"><img src="../img/ran-taipan.jpg" alt="ran taipan"></a>
-                    <a href="ran-taipan.html" class="title"><span>Rắn Taipan nội địa</span></a>
-                </div>
+    <div id="background">
+<header>
+    <h1>Top 6 loài động vật độc nhất thế giới</h1>
+</header>
+<main>
+    <div id="container">
+        <div id="row1">
+            <div class="item">
+                <a href="ech-phi-tieu-doc.html" class="image"><img src="../img/ech-phi-tieu-doc.jpg" class="image"
+                        alt="ech phi tieu doc"></a>
+                <a href="ech-phi-tieu-doc.html" class="title"><span>Ếch phi tiêu độc</span></a>
             </div>
-            <div class="row">
-                <div class="item">
-                    <a href="nhen-lang-thang-brazil.html" class="image"><img src="../img/nhen-lang-thang-brazil.jpg" alt="nhen lang thang brazil"></a>
-                    <a href="nhen-lang-thang-brazil.html" class="title"><span>Nhện lang thang Brazil</span></a>
-                </div>
-                <div class="item">
-                    <a href="ca-mat-quy.html" class="image"><img src="../img/ca-mat-quy.jpg" alt="ca mat quy"></a>
-                    <a href="ca-mat-quy.html" class="title"><span>Cá mặt quỷ</span></a>
-                </div>
-                <div class="item">
-                    <a href="oc-sen-marbled-cone.html" class="image"><img src="../img/oc-sen-marbled-cone.jpg" alt="oc sen mrbled cone"></a>
-                    <a href="oc-sen-marbled-cone.html" class="title"><span>Ốc sên Marbled Cone</span></a>
-                </div>
+            <div class="item">
+                <a href="ca-noc.html" class="image"><img src="../img/ca-noc.jpg" alt="ca noc"></a>
+                <a href="ca-noc.html" class="title"><span>Cá nóc</span></a>
+            </div>
+            <div class="item">
+                <a href="ran-taipan.html" class="image"><img src="../img/ran-taipan.jpg" alt="ran taipan"></a>
+                <a href="ran-taipan.html" class="title"><span>Rắn Taipan nội địa</span></a>
             </div>
         </div>
-    </main>
+        <div id="row2">
+            <div class="item">
+                <a href="nhen-lang-thang-brazil.html" class="image"><img src="../img/nhen-lang-thang-brazil.jpg"
+                        alt="nhen lang thang brazil"></a>
+                <a href="nhen-lang-thang-brazil.html" class="title"><span>Nhện lang thang Brazil</span></a>
+            </div>
+            <div class="item">
+                <a href="ca-mat-quy.html" class="image"><img src="../img/ca-mat-quy.jpg" alt="ca mat quy"></a>
+                <a href="ca-mat-quy.html" class="title"><span>Cá mặt quỷ</span></a>
+            </div>
+            <div class="item">
+                <a href="oc-sen-marbled-cone.html" class="image"><img src="../img/oc-sen-marbled-cone.jpg"
+                        alt="oc sen mrbled cone"></a>
+                <a href="oc-sen-marbled-cone.html" class="title"><span>Ốc sên Marbled Cone</span></a>
+            </div>
+        </div>
+    </div>
+</main>
+    </div>
 </body>
 </html>
