--- a/dom-projects/dom-basics/index.html
+++ b/dom-projects/dom-basics/index.html
@@ -121,42 +121,41 @@
 
         <p id="optional-4">
             Thay đổi kích thước font chữ theo ý muốn
-            <input type="text" placeholder="Nhập kích thước mong muốn...">
-            <button id="change-font-size-optional">
+            <input type="text" placeholder="Nhập kích thước mong muốn..." id="change-font-size-optional">
+            <button id="btn-change-font-size-optional">
                 Click here
             </button>
         </p>
 
         <p class="optional-5-and-6">
             Tăng kích thước font chữ theo ý muốn
-            <input type="number" max="10" min="1" value="1">
-            <button id="increase-paragraph-font-size-optional-1">
+            <input type="number" max="10" min="1" value="1" id="increase-font-size-optional">
+            <button id="btn-increase-para-1-font-size-optional">
                 Paragraph 1
             </button>
-            <button id="increase-paragraph-font-size-optional-2">
+            <button id="btn-increase-para-2-font-size-optional">
                 Paragraph 2
             </button>
-            <button id="increase-paragraph-font-size-optional-3">
+            <button id="btn-increase-para-3-font-size-optional">
                 Paragraph 3
             </button>
         </p>
 
         <p class="optional-5-and-6">
             Giảm kích thước font chữ theo ý muốn
-            <input type="number" max="10" min="1" value="1">
-            <button id="decrease-paragraph-font-size-optional-1">
+            <input type="number" max="10" min="1" value="1" id="decrease-font-size-optional">
+            <button id="btn-decrease-para-1-font-size-optional">
                 Paragraph 1
             </button>
-            <button id="decrease-paragraph-font-size-optional-2">
+            <button id="btn-decrease-para-2-font-size-optional">
                 Paragraph 2
             </button>
-            <button id="decrease-paragraph-font-size-optional-3">
+            <button id="btn-decrease-para-3-font-size-optional">
                 Paragraph 3
             </button>
         </p>
 
     </div>
     <script src="./script.js" type="text/javascript"></script>
-    <script src="./script-optional.js" type="text/javascript"></script>
 </body>
 </html>
