--- a/dom-projects/calculator-basics/index.html
+++ b/dom-projects/calculator-basics/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,47 +9,63 @@
     <link href="https://fonts.googleapis.com/css?family=Orbitron&display=swap" rel="stylesheet">
     <title>Calculator</title>
 </head>
+
 <body>
-    <h1>Calculator</h1>
     <div id="cal">
+        <h1 id="signed">Calculator</h1>
         <div id="inputs">
-            <input type="text" id="first-input" dir="rtl">
-            <input type="text" id="second-input" dir="rtl">
+            <input type="text" id="sub-input" disabled>
+            <input type="text" id="main-input">
+        </div>
+        <div id="wrap">
+
+        </div>
+        <div id="special">
+            <button id="squared">x<sup>n</sup></button>
+            <button id="factorial">x!</button>
+            <button id="square-root">&radic;x</button>
+            <button id="sin">sin</button>
+            <button id="cos">cos</button>
+            <button id="tan">tan</button>
+            <button id="log">log</button>
+            <button id="ln">ln</button>
         </div>
 
-        <div id="row-1">
-            <button id="clear">C</button>
-            <button id="pos-neg">±</button>
-            <button id="modulus">%</button>
-            <button id="divide">÷</button>
+        <div id="numbers">
+            <button id="(" onclick="render(this)">(</button>
+            <button id=")" onclick="render(this)">)</button>
+            <button id="clear">ce</button>
+            <button id="full-clear" ">c</button>
+
+            <button id="%" onclick="render(this) ">%</button>
+            <button id="pos-neg">&plusmn;</button>
+            <button id="pi" onclick="render(this) ">&pi;</button>
+            <button id="/" class="red" onclick="render(this) ">÷</button>
+
+            <button id="7" onclick=" render(this) ">7</button>
+            <button id="8" onclick=" render(this) ">8</button>
+            <button id="9" onclick=" render(this) ">9</button>
+            <button id="*" class="red" onclick="render(this) ">x</button>
+
+            <button id="4" onclick=" render(this) ">4</button>
+            <button id="5" onclick=" render(this) ">5</button>
+            <button id="6" onclick=" render(this) ">6</button>
+            <button id="-" class=" red " onclick="render(this) ">-</button>
+
+            <button id="1" onclick=" render(this) ">1</button>
+            <button id="2" onclick=" render(this) ">2</button>
+            <button id="3" onclick=" render(this) ">3</button>
+            <button id="+" class="red" onclick="render(this) ">+</button>
+
+            <button id="0" onclick="render(this) ">0</button>
+            <button id="00" onclick="render(this) ">00</button>
+            <button id="." onclick="render(this) ">.</button>
+            <button id="=" class="red">=</button>
         </div>
 
-        <div id="row-2">
-            <button id="seven">7</button>
-            <button id="eight">8</button>
-            <button id="night">9</button>
-            <button id="multiply">x</button>
-        </div>
-
-        <div id="row-3">
-            <button id="four">4</button>
-            <button id="five">5</button>
-            <button id="six">6</button>
-            <button id="minus">-</button>
-        </div>
-
-        <div id="row-4">
-            <button id="one">1</button>
-            <button id="two">2</button>
-            <button id="three">3</button>
-            <button id="plus">+</button>
-        </div>
-
-        <div id="row-5">
-            <button id="zero">0</button>
-            <button id="dot">.</button>
-            <button id="equal">=</button>
-        </div>
     </div>
+    </div>
+    <script src=" ./script.js "></script>
 </body>
+
 </html>
