--- a/dom-projects/dom-basics/index.html
+++ b/dom-projects/dom-basics/index.html
@@ -73,7 +73,7 @@
         </p>
 
         <p>
-            Thay đổi kích thước font chữ
+            Thay đổi kích thước font chữ thành 20px
             <button id="change-font-size">
                 Click here
             </button>
@@ -95,7 +95,7 @@
 
     </div>
     <h2>Optional Function</h2>
-    <div id="optional">
+    <div id="optional-function">
 
         <p class="optional-1-and-2">
             Đổi màu chữ theo ý muốn
@@ -113,7 +113,7 @@
 
         <p class="optional-1-and-2">
             Đổi màu background theo ý muốn
-            <input type="color" id="change-bg-color-optional" value="#ffffff">
+            <input type="color" id="change-bg-color-optional">
             <button id="btn-change-bg-color-optional">
                 Click here
             </button>
