change html text

--- a/dom-projects/dom-basics/index.html
+++ b/dom-projects/dom-basics/index.html
@@ -80,14 +80,14 @@
         </p>
 
         <p>
-            Tăng dần kích thước font chữ
+            Tăng dần kích thước font chữ paragraph 1
             <button id="increase-font-size">
                 Click here
             </button>
         </p>
 
         <p>
-            Giảm dần kích thước font chữ
+            Giảm dần kích thước font chữ paragraph 2
             <button id="decrease-font-size">
                 Click here
             </button>
