update dom basics

--- a/dom-projects/dom-basics/index.html
+++ b/dom-projects/dom-basics/index.html
@@ -123,17 +123,17 @@
             Copy đoạn văn theo ý muốn
             <label for="from">Từ:&nbsp;&nbsp;&nbsp;
                 <select name="from" id="copy-content-from">
-                    <option value="para-1">Đoạn 1</option>
-                    <option value="para-2">Đoạn 2</option>
-                    <option value="para-3">Đoạn 3</option>
+                    <option value="paragraph-one">Đoạn 1</option>
+                    <option value="paragraph-two">Đoạn 2</option>
+                    <option value="paragraph-three">Đoạn 3</option>
                 </select>
             </label>
 
             <label for="to">Sang:
                 <select name="to" id="copy-content-to">
-                    <option value="para-1">Đoạn 1</option>
-                    <option value="para-2">Đoạn 2</option>
-                    <option value="para-3">Đoạn 3</option>
+                    <option value="paragraph-one">Đoạn 1</option>
+                    <option value="paragraph-two">Đoạn 2</option>
+                    <option value="paragraph-three">Đoạn 3</option>
                 </select>
             </label>
 
