update operator display

--- a/dom-projects/calculator-basics/index.html
+++ b/dom-projects/calculator-basics/index.html
@@ -31,7 +31,7 @@
             <button id="paren-l" class="parenthesis" onclick="parens1(this)">(</button>
             <button id="paren-r" class="parenthesis" onclick="parens2(this)">&rpar;</button>
             <button id="clear">ce</button>
-            <button id="full-clear" ">c</button>
+            <button id="full-clear">c</button>
 
             <button id="Ans" onclick="ansBtn(this)">Ans</button>
             <button id=" %" onclick="percent(this)">%</button>
@@ -41,23 +41,23 @@
             <button id="7" class="numbers" onclick="input(this)">7</button>
             <button id="8" class="numbers" onclick="input(this)">8</button>
             <button id="9" class="numbers" onclick="input(this)">9</button>
-            <button id="/" class="red operator" onclick="calculator(this)">/</button>
+            <button id="/" class="red operator" onclick="calculator(this)">&#247;</button>
 
             <button id="4" class="numbers" onclick="input(this)">4</button>
             <button id="5" class="numbers" onclick="input(this)">5</button>
             <button id="6" class="numbers" onclick="input(this)">6</button>
-            <button id="*" class="red operator" onclick="calculator(this)">*</button>
+            <button id="*" class="red operator" onclick="calculator(this)">&#215;</button>
 
             <button id="1" class="numbers" onclick="input(this)">1</button>
             <button id="2" class="numbers" onclick="input(this)">2</button>
             <button id="3" class="numbers" onclick="input(this)">3</button>
-            <button id="-" class="red operator" onclick="calculator(this)">-</button>
+            <button id="-" class="red operator" onclick="calculator(this)">&#8722;</button>
 
 
             <button id="0" class="numbers" onclick="input(this)">0</button>
             <button id="00" class="numbers" onclick="input(this)">00</button>
             <button class="dot" onclick="dot(this)">.</button>
-            <button id="+" class="red operator" onclick="calculator(this)">+</button>
+            <button id="+" class="red operator" onclick="calculator(this)">&#43;</button>
 
             <button id="change-theme">Change Theme</button>
             <button id="=" class="red" onclick="equal(this)">=</button>
