--- a/dom-projects/calculator-basics/index.html
+++ b/dom-projects/calculator-basics/index.html
@@ -51,7 +51,7 @@
             <button id="1" class="numbers" onclick="input(this)">1</button>
             <button id="2" class="numbers" onclick="input(this)">2</button>
             <button id="3" class="numbers" onclick="input(this)">3</button>
-            <button id="-" class="red operator" onclick="calculator(this)">&#8722;</button>
+            <button id="minus" class="red operator" onclick="calculator(this)">&#8722;</button>
 
 
             <button id="0" class="numbers" onclick="input(this)">0</button>
