--- a/dom-projects/form/html/login.html
+++ b/dom-projects/form/html/login.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="../css/style2.css" type="text/css">
-    <script src="https://kit.fontawesome.com/095dd6d541.js"></script>
-
+    <link rel="stylesheet" href="../css/all.css">
     <title>Login</title>
 </head>
 
