--- a/dom-projects/form/html/register.html
+++ b/dom-projects/form/html/register.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="../css/style3.css" type="text/css">
-    <script src="https://kit.fontawesome.com/095dd6d541.js"></script>
-
+    <link href="../css/all.css" rel="stylesheet">
     <title>Register</title>
 </head>
 
