--- a/dom-projects/form/html/register.html
+++ b/dom-projects/form/html/register.html
@@ -52,19 +52,21 @@
 
                     <div id="gender-select">
                         <span>Gender:</span>
-                        <input type="radio" name="gender" id="male" value="Male">
+                        <input type="radio" name="gender" id="male" value="Male" class="gender">
                         <label for="male" class="label">
                             Male
                         </label>
-                        <input type="radio" name="gender" id="female" value="Female">
+                        <input type="radio" name="gender" id="female" value="Female" class="gender">
                         <label for="female" class="label">
                             Female
                         </label>
-                        <input type="radio" name="gender" id="other" value="other">
+                        <input type="radio" name="gender" id="other" value="other" class="gender">
                         <label for="other" class="label">
                             Other
                         </label>
                     </div>
+                    <div class="error"></div>
+
                     <div id="birthday-select">
                         <span>Birth Day:</span>
                         <select name="day" id="day" class="birthday">
