complete gender and birthday validate (Form)

--- a/dom-projects/calculator-basics/index.html
+++ b/dom-projects/calculator-basics/index.html
@@ -11,10 +11,12 @@
 
 <body>
     <div id="cal">
-        <h1 id="signed">Calculator</h1>
+        <div id="header">
+            <h1 id="signed">Calculator</h1>
+        </div>
         <div id="inputs">
             <input type="text" id="sub-input" disabled>
-            <input type="text" id="main-input">
+            <input type="text" id="main-input" disabled>
         </div>
         <div id="special">
             <button id="squared" onclick="squared(this)">x<sup>n</sup></button>
