fix 0. with more than 3 zero number and 0.1+0.2-0.3

--- a/dom-projects/table_data/index.html
+++ b/dom-projects/table_data/index.html
@@ -20,7 +20,7 @@
                 <th>
                     profile-image
                 </th>
-                <th class="a" order="0" onclick="sort(2, $(this))">
+                <th class="can-sort" order="0" onclick="sort(2, $(this))">
                     display_name
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
@@ -29,7 +29,7 @@
                         <i class="fas fa-sort-down"></i>
                     </span>
                 </th>
-                <th class="a" order="0" onclick="sort(3, $(this))">
+                <th class="can-sort" order="0" onclick="sort(3, $(this))">
                     user_id
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
@@ -38,7 +38,7 @@
                         <i class="fas fa-sort-down"></i>
                     </span>
                 </th>
-                <th class="a" order="0" onclick="sort(4, $(this))">
+                <th class="can-sort" order="0" onclick="sort(4, $(this))">
                     reputation
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
@@ -50,7 +50,7 @@
                 <th>
                     website_url
                 </th>
-                <th class="a" order="0" onclick="sort(6, $(this))">
+                <th class="can-sort" order="0" onclick="sort(6, $(this))">
                     creation_date
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
@@ -65,6 +65,7 @@
         </table>
     </div>
     <script src="jquery-3.4.1.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="main.js"></script>
 </body>
