--- a/dom-projects/calculator-basics/index.html
+++ b/dom-projects/calculator-basics/index.html
@@ -67,7 +67,8 @@
 
     </div>
     </div>
-    <script src="./jquery-3.4.1.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
     <script src=" ./script.js "></script>
 </body>
 
