--- a/dom-projects/form/html/index.html
+++ b/dom-projects/form/html/index.html
@@ -24,7 +24,7 @@
                 <p class="register-text" id="new-user-text">
                     Are you new here?
                 </p>
-                <button class="btn" id="register-btn">Register</button>
+                <button class="btn sub-btn" id="register-btn">Register</button>
             </div>
         </div>
         <div id="part-2">
