--- a/dom-projects/form/html/register.html
+++ b/dom-projects/form/html/register.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="wrap">
+    <div id="wrap" class="wrap-animation">
         <div id="part-1">
             <div id="header">
                 <a href="index.html" id="go-back-home"><i class="fas fa-arrow-left"></i></a>
@@ -88,12 +88,12 @@
                     <div class="error"></div>
                     <div id="footer-btn">
                         <button type="submit" name="submit" id="register-btn" class="btn">Register</button>
-                        <button type="reset" name="reset" id="reset-btn" class="btn" class="btn">Reset</button>
+                        <button type="reset" name="reset" id="reset-btn" class="btn sub-btn" class="btn">Reset</button>
                     </div>
                 </div>
             </form>
         </div>
-        <div id="part-2">
+        <div id="part-2" class="part-2-animation">
         </div>
     </div>
     <script src="../js/register.js"></script>
