--- a/dom-projects/form/html/login.html
+++ b/dom-projects/form/html/login.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="wrap">
+    <div id="wrap" class="wrap-animation">
         <div id="part-1">
             <div id="header">
                 <a href="index.html" id="go-back-home"><i class="fas fa-arrow-left"></i></a>
@@ -40,7 +40,7 @@
                 Dont' have an account? <a href="register.html">Register here</a>
             </p>
         </div>
-        <div id="part-2"></div>
+        <div id="part-2" class="part-2-animation"></div>
     </div>
     <script src="../js/login.js"></script>
 </body>
