--- a/dom-projects/table_data/index.html
+++ b/dom-projects/table_data/index.html
@@ -13,15 +13,15 @@
 </head>
 
 <body>
-    <h1>stackoverflow_user_json_data</h1>
+    <h1>Stackoverflow API User</h1>
     <div id="wrap">
         <table>
             <thead>
                 <th>
-                    profile-image
+                    Profile Image
                 </th>
                 <th class="can-sort" order="0" onclick="sort(2, $(this))">
-                    display_name
+                    Display Name
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
                     </span>
@@ -30,7 +30,7 @@
                     </span>
                 </th>
                 <th class="can-sort" order="0" onclick="sort(3, $(this))">
-                    user_id
+                    User ID
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
                     </span>
@@ -39,7 +39,7 @@
                     </span>
                 </th>
                 <th class="can-sort" order="0" onclick="sort(4, $(this))">
-                    reputation
+                    Reputation
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
                     </span>
@@ -48,10 +48,10 @@
                     </span>
                 </th>
                 <th>
-                    website_url
+                    Website URL
                 </th>
                 <th class="can-sort" order="0" onclick="sort(6, $(this))">
-                    creation_date
+                    Creation Date
                     <span class="desc">
                         <i class="fas fa-sort-up"></i>
                     </span>
