update border radius part 1 animation

--- a/dom-projects/form/html/login.html
+++ b/dom-projects/form/html/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="wrap" class="wrap-animation">
-        <div id="part-1">
+        <div id="part-1" class="part-1-animation">
             <div id="header">
                 <a href="index.html" id="go-back-home"><i class="fas fa-arrow-left"></i></a>
                 <h1>Login</h1>
